# learning-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
executable/: CMakeLists.txt  main.cpp
say-hello/: CMakeLists.txt  hello.cpp  hello.hpp
say-hello/proto/: CMakeLists.txt  Person.proto
